--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "framer-motion": "^10.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.68.0"
+    "react-slick": "^0.30.2",
+    "sass": "^1.68.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "18.2.15",
